# CMU-Robot-Design

./: .sim.py.swp  Arm_Planet_IK.py  LICENSE  README.md  const.py  control_no_sim.py  demo_move.py  input_test.py  keyboard_control.py  main.py  main_test.py  main_test2.py  main_test3.py  parseTest.py  sim.py  sim2.py  sim_input.py  sim_voltage.py  simple.py  test.py  thread_ex.py  upload_script.sh  validAngles.py
data/Arm_Final_Planet_hook/: CMakeLists.txt  package.xml
data/Arm_Final_Planet_hook/launch/: display.launch  gazebo.launch
data/Arm_Final_Planet_hook/meshes/: base_link.STL  hook_link.STL  link_1.STL  link_3.STL
data/Arm_Final_Planet_hook/urdf/: Arm_Final_Planet_hook.csv  Arm_Final_Planet_hook.urdf
data/experimentalData/: currentData.csv  currentData2.csv  currentLogger.py
data/version0/Arm_Planet/: CMakeLists.txt  package.xml
data/version0/Arm_Planet/config/: joint_names_Arm_Planet.yaml
data/version0/Arm_Planet/launch/: display.launch  gazebo.launch
data/version0/Arm_Planet/meshes/: base_link.STL  ee_link.STL  planar_link_1.STL  planar_link_2.STL  swivel_link.STL
data/version0/Arm_Planet/urdf/: Arm_Planet.csv  Arm_Planet.urdf
data/version1/Arm_Final_Planet/launch/: display.launch  gazebo.launch
data/version1/Arm_Final_Planet/meshes/: base_link.STL  link_1.STL  link_3.STL
data/version1/Arm_Final_Planet/urdf/: Arm_Final_Planet.csv  Arm_Final_Planet.urdf
data/version2/Arm_Final_Planet_0407/: CMakeLists.txt  package.xml
data/version2/Arm_Final_Planet_0407/urdf/: Arm_Final_Planet.csv  Arm_Final_Planet.urdf
